# webcat-infra-chain

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  Readme.md  flake.nix  go.mod  justfile  main.go
.config/: nextest.toml
.github/workflows/: container.yml  integration.yml  publish.yml  rust.yml
archive/: app.go  go.sum  utils.go
configs/testnets/01/: genesis.json
crates/: README.md
crates/felidae/: Cargo.toml
crates/felidae-admin/: Cargo.toml
crates/felidae-admin/src/: lib.rs
crates/felidae-deployer/: Cargo.toml
crates/felidae-deployer/src/: cli.rs  join.rs  lib.rs  main.rs  network.rs  node.rs  ports.rs
crates/felidae-deployer/src/cli/: create_network.rs  join_network.rs  run_network.rs
crates/felidae-deployer/tests/: integration.rs
crates/felidae-deployer/tests/integration/: admin_tests.rs  binaries.rs  cli_tests.rs  constants.rs  harness.rs  helpers.rs  join_tests.rs  main.rs  oracle_tests.rs  query_tests.rs  validator_query_tests.rs
crates/felidae-oracle/: Cargo.toml  test.html  wasm-pack.toml
crates/felidae-oracle/src/: lib.rs
crates/felidae-proto/: Cargo.toml  build.rs
crates/felidae-proto/src/: lib.rs  transaction.proto  traverse.rs
crates/felidae-proto/src/transaction/: sign.rs
crates/felidae-proto/src/transaction/sign/: signer.rs  test.rs
crates/felidae-publish/: Cargo.toml
crates/felidae-publish/src/: light_block.rs  main.rs  verification.rs
crates/felidae-publish/src/commands/: mod.rs  print.rs  reconstruct.rs  verify.rs
crates/felidae-state/: Cargo.toml
crates/felidae-state/src/: abci.rs  lib.rs  store.rs  vote_queue.rs
crates/felidae-state/src/state/: abci.rs  action.rs  app_hash.rs  canonical.rs  chain_id.rs  config.rs  height.rs  time.rs  util.rs  validator.rs  voting.rs
crates/felidae-state/src/state/abci/: begin_block.rs  deliver_tx.rs  end_block.rs  finalize_block.rs  init_chain.rs
crates/felidae-state/src/state/action/: observe.rs  observe_tests.rs  reconfigure.rs
crates/felidae-state/src/state/voting/: vote_queue.rs
crates/felidae-state/src/state/voting/vote_queue/: tests.rs
crates/felidae-state/src/state/voting/vote_queue/tests/: basic_vote.rs  common.rs  mod.rs  pending.rs  quorum.rs  time_based.rs
crates/felidae-state/src/vote_queue/: keys.rs
crates/felidae-state/src/vote_queue/keys/: test.rs
crates/felidae-traverse/: Cargo.toml
crates/felidae-traverse-derive/: Cargo.toml
crates/felidae-traverse-derive/src/: lib.rs
crates/felidae-traverse/src/: lib.rs
crates/felidae-types/: Cargo.toml
crates/felidae-types/src/: lib.rs  response.rs  transaction.rs
crates/felidae-types/src/snapshots/: felidae_types__transaction__tests__config_serialization.snap  felidae_types__transaction__tests__observe_serialization.snap  felidae_types__transaction__tests__transaction_serialization.snap
crates/felidae-types/src/transaction/: authenticated.rs  build.rs  convert.rs
crates/felidae/src/: cli.rs  lib.rs  main.rs
crates/felidae/src/cli/: admin.rs  compare_state.rs  debug.rs  oracle.rs  query.rs  reset.rs  start.rs
crates/felidae/src/cli/debug/: compare_state.rs  key_convert.rs
crates/felidae/src/cli/oracle/: server.rs  zone.rs
crates/felidae/src/cli/start/: query.rs
docs/: seq_diag.md  webcat-onboard-guide.md
frontend/: README.md  config.json.example  package-lock.json  package.json  server.js
frontend/examples/: k8s.yaml
frontend/public/: app.js  index.html  styles.css
genesis/testnet01/: genesis.json
genesis/testnet02/: genesis.json
test_data/: Readme.md  block.json  leaves.json  oracles.json
