[workspace]
resolver = "3"

members = [
    "crates/felidae",
    "crates/felidae-proto",
    "crates/felidae-types",
    "crates/felidae-traverse",
    "crates/felidae-traverse-derive",
    "crates/felidae-state",
    "crates/felidae-oracle",
    "crates/felidae-admin",
    "crates/felidae-publish",
]

[workspace.dependencies]
axum = "0.8"
base64-url = "3.0.2"
bytes = { version = "1", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
cnidarium = "0.84"
color-eyre = "0.6"
directories = "6.0"
ecdsa = { version = "0.16" }
ed25519-dalek = { version = "2.1", features = ["std"] }
elliptic-curve = { version = "0.13" }
fqdn = { version = "0.4.6", features = ["punycode", "strict-rfc"] }
futures = "0.3"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
http = "1.3"
humantime = "2"
humantime-serde = "1"
insta = "1"
js-sys = "0.3"
json-rpc-types = "1.3"
olpc-cjson = "0.1.4"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
parking_lot = "0.12"
pkcs8 = { version = "0.10", features = ["std"] }
prost = "0.13"
prost-build = "0.14"
prost-types = { version = "0.14" }
rand_core = { version = "0.6", features = ["std"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["hex", "base64"] }
sha2 = "0.10"
tendermint = "0.40"
tendermint-proto = "0.40"
tendermint-rpc = { version = "0.40", features = ["http-client"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-abci = "0.19.1"
tower-http = { version = "0.6", features = ["util", "normalize-path"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wasm-bindgen = "0.2"
web-sys = "0.3"
