[workspace]
resolver = "3"

members = [
    "crates/felidae",
    "crates/felidae-proto",
    "crates/felidae-types",
    "crates/felidae-traverse",
    "crates/felidae-traverse-derive",
    "crates/felidae-state",
    "crates/felidae-oracle",
    "crates/felidae-admin",
    "crates/felidae-publish",
    "crates/felidae-deployer",
]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
tower = "0.5"
tower-abci = "0.19.1"
tendermint = "0.40"
tendermint-rpc = { version = "0.40", features = ["http-client"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
color-eyre = "0.6"
prost = "0.13"
prost-build = "0.14"
parking_lot = "0.12"
http = "1.3"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3", features = ["hex", "base64"] }
serde_json = "1"
fqdn = { version = "0.4.6", features = ["punycode", "strict-rfc"] }
bytes = { version = "1", features = ["serde"] }
cnidarium = "0.84"
prost-types = { version = "0.14" }
tendermint-proto = "0.40"
hex = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
directories = "6.0"
pkcs8 = { version = "0.10", features = ["std"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
ecdsa = { version = "0.16" }
elliptic-curve = { version = "0.13" }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
rand_core = { version = "0.6", features = ["std"] }
sha2 = "0.10"
getrandom = { version = "0.2", features = ["js"] }
insta = "1"
humantime-serde = "1"
humantime = "2"
olpc-cjson = "0.1.4"
json-rpc-types = "1.3"
tower-http = { version = "0.6", features = ["util", "normalize-path"] }
base64-url = "3.0.2"
ed25519-dalek = { version = "2.1", features = ["std"] }
addr = "0.15"

# config for 'cargo release'
[workspace.metadata.release]
# Instruct cargo-release to increment versions for all packages in the workspace in lockstep.
shared-version = true
# Format spec for the auto-generated git tag, based on new version for release.
tag-name = "v{{version}}"
# The message is required for an annotated tag to be created.
tag-message                = "Felidae version {{version}}"
pre-release-commit-message = "chore: release version {{version}}"
# Disable publishing to crates.io, for now.
publish = false
# Do commit, tag, and push the version bump, triggering a new release.
tag = true
# Don't push automatically; let the developer do that manually, after reviewing changes.
push = false
# Edit each crate's Cargo.toml, bumping versions for other workspace crates.
dependent-version = "upgrade"
# Permit publishing from any branch, because in GHA CI context, HEAD is checked out.
allow-branch = ["*"]
