[package]
name = "felidae-oracle"
version = "0.1.0"
edition = "2024"

[dependencies]
felidae-types = { path = "../felidae-types" }
prost = { workspace = true }
thiserror = { workspace = true }
fqdn = { workspace = true }
hex = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
getrandom = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
canonical_json = { workspace = true }

[lib]
crate-type = ["lib", "cdylib"]