[package]
name = "felidae-oracle"
version = "0.3.0"
edition = "2024"

[dependencies]
felidae-types = { path = "../felidae-types" }
thiserror = { workspace = true }
fqdn = { workspace = true }
hex = { workspace = true }
wasm-bindgen = { workspace = true }
getrandom = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
olpc-cjson = { workspace = true }
base64-url = { workspace = true }
ed25519-dalek = { workspace = true }

[lib]
crate-type = ["lib", "cdylib"]
