[package]
name = "felidae-proto"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = { workspace = true }
aws-lc-rs = { workspace = true }
thiserror = { workspace = true }
felidae-traverse = { path = "../felidae-traverse" }
felidae-traverse-derive = { path = "../felidae-traverse-derive" }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }