[package]
name = "felidae-proto"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = { workspace = true }
p256 = { workspace = true  }
rand_core = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
felidae-traverse = { path = "../felidae-traverse" }
felidae-traverse-derive = { path = "../felidae-traverse-derive" }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
color-eyre = { workspace = true }
tendermint = { workspace = true }
prost-types = { workspace = true }
tendermint-proto = { workspace = true }
pkcs8 = { workspace = true }
ecdsa = { workspace = true }
elliptic-curve = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }