[package]
name = "felidae-proto"
version = "0.3.1"
edition = "2024"
license = "AGPL-3.0"

[dependencies]
prost = { workspace = true }
p256 = { workspace = true  }
rand_core = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
felidae-traverse = { path = "../felidae-traverse" }
felidae-traverse-derive = { path = "../felidae-traverse-derive" }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
color-eyre = { workspace = true }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
pkcs8 = { workspace = true }
ecdsa = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
