[package]
name = "felidae-publish"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "felidae-publish"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tendermint = { workspace = true }
tendermint-rpc = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
color-eyre = { workspace = true }
tokio = { workspace = true, features = ["full"] }

