[package]
name = "felidae-state"
version = "0.2.0"
edition = "2024"

[dependencies]
cnidarium = { workspace = true }
felidae-types = { path = "../felidae-types" }
felidae-proto = { path = "../felidae-proto" }
color-eyre = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
hex = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
tower = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"

[dev-dependencies]
proptest = "1"
