[package]
name = "felidae-types"
version = "0.1.0"
edition = "2024"

[dependencies]
felidae-proto = { path = "../felidae-proto" }
aws-lc-rs = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
fqdn = { workspace = true }
tendermint = { workspace = true }