[package]
name = "felidae-types"
version = "0.3.4"
edition = "2024"
license.workspace = true

[dependencies]
felidae-proto = { path = "../felidae-proto" }
prost = { workspace = true }
thiserror = { workspace = true }
fqdn = { workspace = true }
tendermint = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
humantime-serde = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
