[package]
name = "felidae"
version = "0.2.0"
edition = "2024"

[dependencies]
felidae-types = { path = "../felidae-types" }
felidae-state = { path = "../felidae-state" }
felidae-admin = { path = "../felidae-admin" }
felidae-oracle = { path = "../felidae-oracle" }
felidae-proto = { path = "../felidae-proto" }
futures = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tower-abci = { workspace = true }
tendermint = { workspace = true }
tendermint-rpc = { workspace = true }
color-eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
cnidarium = { workspace = true }
directories = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
humantime = { workspace = true }
serde_with = { workspace = true }
fqdn = { workspace = true }
prost = { workspace = true }
